2005-04-02  Brian Wellington <bwelling@xbill.org>
	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/legend.c,
	client/gtk/offline.c, client/gtk/theme.c, client/gtk/theme.h: Cleanups
	to the theme code.

2005-04-02  0.9.4  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c: When receiving gold, the AI must choose
	something, even when it has enough resources.
	
2005-03-31  Brian Wellington <bwelling@xbill.org>
	* client/ai/ai.c: The AI should not stay in a game if it is full.

2005-03-28  Brian Wellington <bwelling@xbill.org>
	* client/gtk/connect.c, client/gtk/gui.c, client/gtk/theme.c,
	client/gtk/theme.h, common/gtk/select-game.c,
	common/gtk/select-game.h: Replace deprecated GtkOptionMenus
	with GtkComboBoxes.

2005-03-28  0.9.3  Roland Clobus <rclobus@bigfoot.com>
	* Makefile.am: Added target 'restorepo', to make it easier to remove
	the changes to the *.po files when make distcheck has been used, but
	no new translations have been added.
	* client/gtk/data/splash.svg, client/gtk/data/splash.png: Updated
	splash screen image to version 0.9
	* configure.ac: Require Gtk+-2.4. Added checks, which 'autoscan' did
	recommend.

2005-03-26  0.9.2  Roland Clobus <rclobus@bigfoot.com>
	* client/callback.h, client/ai/greedy.c, client/common/client.c,
	client/common/client.h, client/common/player.c,
	client/common/resource.c, client/gtk/callbacks.c,
	client/gtk/connect.c, client/gtk/gui.c, client/gtk/gui.h,
	client/gtk/legend.c, client/gtk/settingscreen.c, client/gtk/trade.c,
	common/log.c, common/log.h, common/gtk/common_gtk.c: Made several
	gchar* arguments const gchar* argument.

2005-03-24  Brian Wellington <bwelling@xbill.org>
	* client/gtk/connect.c: Remove static buffers.

2005-03-23  Brian Wellington <bwelling@xbill.org>
	* client/ai/greedy.c: Add gold support to the AI.
	* server/player.c: The patch to enable random seating ordered
	caused gtk assertions when connecting to a full game.
	* Makefile.am, configure.ac, client/ai/Makefile.am, ai/: Remove