@@ -2,6 +2,8 @@
 	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/legend.c,
 	client/gtk/offline.c, client/gtk/theme.c, client/gtk/theme.h: Cleanups
 	to the theme code.
+	* client/gtk/connect.c, meta-server/gnocatan-meta-server.c,
+	server/server.c: Use g_spawn_async instead of open-coded fork()/exec().
 
 2005-04-02  0.9.4  Roland Clobus <rclobus@bigfoot.com>
 	* client/ai/greedy.c: When receiving gold, the AI must choose
